infra/01-client-deploy.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: #Dictionary
  name: myfrontend-deployment
  labels:
    app: myfrontend
  namespace: default
spec: # Dictionary
  replicas: 1
  selector:
    matchLabels:
      app: myfrontend
  template:  
    metadata: # Dictionary
      name: myfrontend-pod
      labels: # Dictionary
        app: myfrontend  # Key value paids
    spec:
      containers: # List
        - name: myfrontend-container
          image: ricardoterraform/client:f37a5ed572250c5c70724efc76e9435fb8954747
          imagePullPolicy: Always
          #ports: 
            #- containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: deployment1-frontend-service
  labels:
    app: myfrontend
  namespace: default 
spec:
  type: ClusterIP
  selector:
    app: myfrontend
  ports:
    - name: myfrontend
      protocol: TCP
      port: 3000
      targetPort: 3000
