infra/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: 'true' 
spec:
  rules:
    #- host: ricardocloud.pt
    - host: fake.pt
      http:
        paths:
          - path: /posts/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: deployment1-backend-service
                port:
                  number: 4000
          - path: /?(.*)
            pathType: ImplementationSpecific
            #pathType: Prefix
            backend:
              service:
                name: deployment1-frontend-service
                port:
                  number: 3000
